<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_gravity="center"
            android:src="@drawable/studentchat_icon" />

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_email_hint"
            android:background="@drawable/edittext_style"
            android:padding="10dp"
            android:drawableLeft="@drawable/email_icon"
            android:drawablePadding="5dp"
            android:layout_marginTop="10dp"
            android:drawableTint="@color/colorPrimaryDark"/>

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password_hint"
            android:background="@drawable/edittext_style"
            android:padding="10dp"
            android:drawableLeft="@drawable/password_icon"
            android:drawablePadding="5dp"
            android:layout_marginTop="10dp"
            android:drawableTint="@color/colorPrimaryDark"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorAccent"
            android:textSize="20dp"
            android:background="@drawable/button_style"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_have_an_account"
            android:textSize="18dp"
            android:textColor="@color/gray"
            android:layout_marginTop="20dp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"/>

    </LinearLayout>

</ScrollView>